# comfyui-qwenlighting

./: LICENSE  README.md  __init__.py  lighting_maps.json  nodes.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
web/js/: qwen_lighting.js  viewer_light.js
